--- a/src/pages/page3/page3.scss
+++ b/src/pages/page3/page3.scss
@@ -1,3 +1,13 @@
 page-page3 {
+.answered {
+    background-color:#ccffcc;
+    border:1px solid #aaeeaa;
+    padding:12px;
+}
 
+.not-answered {
+    background-color:#ffcccc;
+    border:1px solid #eeaaaa;
+    padding:12px;
+}
 }
