--- a/src/pages/page3/page3.scss
+++ b/src/pages/page3/page3.scss
@@ -10,4 +10,19 @@ page-page3 {
     border:1px solid #eeaaaa;
     padding:12px;
 }
+
+ion-card-header {
+    background-color: #F0F0F0;
+    white-space: inherit;
+}
+ion-label {
+    white-space: inherit;
+}
+.button {
+    background-color: salmon;
+}
+.center {
+    text-align:center;
+}
+
 }
