--- a/src/pages/page3/page3.scss
+++ b/src/pages/page3/page3.scss
@@ -24,5 +24,13 @@ ion-label {
 .center {
     text-align:center;
 }
-
+div.review{
+    text-align:center;
+}
+div.review > div {
+    cursor:pointer;
+    display:inline-block;
+    margin:2px;
+    width: 25%;
+}
 }
