--- a/src/pages/page3/page3.scss
+++ b/src/pages/page3/page3.scss
@@ -1,4 +1,5 @@
 page-page3 {
+
 .answered {
     background-color:#ccffcc;
     border:1px solid #aaeeaa;
@@ -33,4 +34,75 @@ div.review > div {
     margin:2px;
     width: 25%;
 }
+.row {
+    padding-left: 10px;
+}
+
+
+.answered {
+    background-color:#ccffcc;
+    border:1px solid #aaeeaa;
+    padding:12px;
+}
+
+.not-answered {
+    background-color:#ffcccc;
+    border:1px solid #eeaaaa;
+    padding:12px;
+}
+
+.result{
+
+    text-align: left;
+}
+
+.result-question{
+    background-color:#eee;
+    margin:4px;
+    padding:6px;
+}
+.result-question h3 {
+    font-size:18px;
+    font-weight:normal;
+}
+#quiz .result-options {
+    margin: auto;
+    max-width: 800px;
+    text-align: left;
+}
+#quiz .result-options > div{
+    display:inline-block;
+}
+    #quiz .result-options > div > label {
+        background-color: #ccd2dc;
+        color: #224;
+        cursor: pointer;
+        display: block;
+        font-family: 'Segoe UI', Calibri, Arial;
+        font-weight:normal;
+        margin: 5px;
+        text-align: left;
+        font-size: 16px;
+        margin: 6px;
+        min-width: 300px;
+        padding: 6px 12px;
+        vertical-align: middle;
+    }
+
+    #quiz .result-options input[type=checkbox] {
+        background-color:#eee;
+        border:1px solid #ccc;
+        height:16px;
+        width:16px;
+    }
+
+    .result-correct{
+        background-color: #62f462;
+    }
+    
+    .result-incorrect{
+        /*background-color: #f79b60;*/
+    }
+
+
 }
