Changed color theme

--- a/src/pages/page3/page3.scss
+++ b/src/pages/page3/page3.scss
@@ -19,9 +19,9 @@ ion-card-header {
 ion-label {
     white-space: inherit;
 }
-.button {
-    background-color: salmon;
-}
+// .button {
+//     background-color: salmon;
+// }
 .center {
     text-align:center;
 }
