--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
 
   <ion-content>
     <ion-list>
-      <button ion-item (click)="openPage(loginPage)">
+      <button ion-item (click)="openPage2(loginPage)">
         <ion-icon item-left name="log-in"></ion-icon>
         Login
       </button>
@@ -30,7 +30,7 @@
   <ion-content>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-           <ion-icon name="{{p.icon}}"></ion-icon> &nbsp; {{p.title}}
+           <ion-icon item-left name="{{p.icon}}"></ion-icon> &nbsp; {{p.title}}
       </button>
     </ion-list>
 
