--- a/src/app/app.html
+++ b/src/app/app.html
@@ -36,7 +36,7 @@
 
       <ion-list>
       <ion-list-header>
-        Navigation
+        Settings
       </ion-list-header>
       <button ion-item (click)="openPage2(logoutPage)">
         <ion-icon item-left name="log-out"></ion-icon>
