--- a/src/app/app.html
+++ b/src/app/app.html
@@ -27,7 +27,22 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content>
+  <ion-content class="card-background-page">
+
+
+     <ion-card>
+      <img src="../assets/img/rock.png" />
+      <div class="card-title">Cloud Pros</div>
+       <!--<div class="profile-image" data-componentid="image1" style="background:#33cd5f;">
+                    <img src="{{userImg}}" width="90" height="auto" style="border-radius:50%;border:2px solid;border-color:white;display: block; margin-left: auto; margin-right: auto;">
+        </div>-->
+        <!--<ion-fab>
+            <button ion-fab>Button</button>
+        </ion-fab>-->
+      <div class="card-subtitle">{{loggedInUserEmail}}</div>
+    </ion-card>
+
+
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
            <ion-icon item-left name="{{p.icon}}"></ion-icon> &nbsp; {{p.title}}
@@ -35,9 +50,8 @@
     </ion-list>
 
       <ion-list>
-      <ion-list-header>
-        Settings
-      </ion-list-header>
+      <!--<ion-list-header>Settings</ion-list-header>-->
+      <ion-item-divider color="light">Settings</ion-item-divider>
       <button ion-item (click)="openPage2(logoutPage)">
         <ion-icon item-left name="log-out"></ion-icon>
         Logout
