--- a/src/app/app.html
+++ b/src/app/app.html
@@ -31,7 +31,8 @@
 
 
      <ion-card>
-      <img src="../assets/img/rock.png" />
+      <!--<img src="../assets/img/rock.png" />-->
+      <img src="http://all4desktop.com/data_images/original/4248089-cloud.jpg"/>
       <div class="card-title">Cloud Pros</div>
        <!--<div class="profile-image" data-componentid="image1" style="background:#33cd5f;">
                     <img src="{{userImg}}" width="90" height="auto" style="border-radius:50%;border:2px solid;border-color:white;display: block; margin-left: auto; margin-right: auto;">
