--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -37,7 +37,8 @@ strong{
     font-size: 2.0em;
     width: 100%;
     font-weight: bold;
-    color: #fff;
+    // color: #fff;
+    color: #2f559e;
   }
 
   .card-subtitle {
@@ -45,7 +46,8 @@ strong{
     position: absolute;
     top: 60%;
     width: 100%;
-    color: #fff;
+    // color: #fff;
+    color: #2f559e;
   }
 
 }
