--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,6 +25,9 @@ $font-path: "../assets/fonts";
 
 $colors: (
   primary:    #387ef5,
+  // primary:   #FF9900,
+  // primary : #008080,
+  // primary: #0000FF,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
