--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,21 +33,21 @@ strong{
 
   .card-title {
     position: absolute;
-    top: 36%;
+    top: 55%;
     font-size: 2.0em;
     width: 100%;
     font-weight: bold;
     // color: #fff;
-    color: #2f559e;
+    color:#f8f8f8;
   }
 
   .card-subtitle {
     font-size: 1.0em;
     position: absolute;
-    top: 60%;
+    top: 75%;
     width: 100%;
     // color: #fff;
-    color: #2f559e;
+    color: #f8f8f8;
   }
 
 }
