--- a/src/app/app.html
+++ b/src/app/app.html
@@ -33,7 +33,7 @@
      <ion-card>
       <!--<img src="../assets/img/rock.png" />-->
       <!--<img src="http://all4desktop.com/data_images/original/4248089-cloud.jpg"/>-->
-      <img src="../assets/img/sidemenu.jpeg" alt="">
+      <img src="assets/img/sidemenu.jpeg" alt="">
       <!--<img src="http://images.techhive.com/images/article/2015/05/aws-logo-100584713-primary.idge.jpg" />-->
       <div class="card-title">Cloud Pros</div>
        <!--<div class="profile-image" data-componentid="image1" style="background:#33cd5f;">
