--- a/src/app/app.html
+++ b/src/app/app.html
@@ -35,14 +35,15 @@
       <!--<img src="http://all4desktop.com/data_images/original/4248089-cloud.jpg"/>-->
       <img src="assets/img/sidemenu.jpeg" alt="">
       <!--<img src="http://images.techhive.com/images/article/2015/05/aws-logo-100584713-primary.idge.jpg" />-->
-      <div class="card-title">Cloud Pros</div>
+      <div class="card-title">Ameren ARB</div>
        <!--<div class="profile-image" data-componentid="image1" style="background:#33cd5f;">
                     <img src="{{userImg}}" width="90" height="auto" style="border-radius:50%;border:2px solid;border-color:white;display: block; margin-left: auto; margin-right: auto;">
         </div>-->
         <!--<ion-fab>
             <button ion-fab>Button</button>
         </ion-fab>-->
-      <div class="card-subtitle">{{loggedInUserEmail}}</div>
+      <!-- <div class="card-subtitle">{{loggedInUserEmail}}</div> -->
+      <div class="card-subtitle">Self Assessment</div>
     </ion-card>
 
 
