--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,7 +32,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  salmon:    #FA8072
+  salmon:    #FA8072,
+  orange: #FFA500
 );
 
 
