--- a/src/pages/topicsListPage/topicsListPage.scss
+++ b/src/pages/topicsListPage/topicsListPage.scss
@@ -4,6 +4,13 @@ page-page2 {
         width: 100%;
         left: 0;
         bottom: 0;
-        text-align:right;
+        text-align:center;
+    }
+    .bottomTitleicon {
+        position: relative;
+        width: 100%;
+        left: 0;
+        bottom: 0;
+        text-align:center;
     }
 }
