--- a/src/app/app.html
+++ b/src/app/app.html
@@ -67,6 +67,29 @@
 </ion-menu>
 
 
+<ion-menu [content]="content" side="right" id="menu2">
+    <ion-header>
+        <ion-toolbar color="danger">
+            <ion-title>USER PROFILE</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content>
+        <ion-list>
+            <ion-item menuClose>
+                <ion-icon name=""></ion-icon>
+                Forget Password
+                <ion-icon name="key" item-right></ion-icon>
+            </ion-item>
+            <ion-item menuClose>
+                <ion-icon name=""></ion-icon>
+                Logout
+                <ion-icon name="lock" item-right></ion-icon>
+            </ion-item>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
